--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=cms
+# MySQL ??
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@127.0.0.1:1521/ORCLCDB
+spring.datasource.username=BOOT_DEV
+spring.datasource.password=2222
+
+# true ??? JPA ??? ?? ??
+spring.jpa.show-sql=true
+
+# DDL(create, alter, drop) ??? DB? ?? ??? ??? ? ??.
+spring.jpa.hibernate.ddl-auto=validate 
+# JPA? ???? Hibernate? ????? ??? SQL? ???? ????.
+spring.jpa.properties.hibernate.format_sql=true
