feat: actuator 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,26 @@ spring.datasource.password=2222
 spring.jpa.show-sql=true
 
 # DDL(create, alter, drop) ??? DB? ?? ??? ??? ? ??.
-spring.jpa.hibernate.ddl-auto=validate 
+spring.jpa.hibernate.ddl-auto=update
 # JPA? ???? Hibernate? ????? ??? SQL? ???? ????.
 spring.jpa.properties.hibernate.format_sql=true
+
+
+# actuator setting
+management.server.port=9292
+management.endpoints.web.base-path=/manage
+
+# actuator ?? ??? ?? ?? ??
+management.endpoints.web.exposure.include=*
+
+# actuator ?? ?? ??
+management.endpoint.health.show-details=always
+
+# actuator java os info
+management.info.java.enabled=true
+management.info.os.enabled=true
+
+#actuator env & info
+management.info.env.enabled=true
+info.app.name=cms_boot
+info.app.company=cms
